create mobile header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panic</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href=css/style.css>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="nav">
+        <i class="fas fa-bars"></i>
+        <!-- podemos cambiarlo para adaptarlo a bem? -->
+        <img class="container__img" src="media/media03.svg" alt="panic logo" />
+        <a class="nav__link" href="#">q u i</a>
+      </nav>
+    </header>
+  </body>
 </html>
