added desktop header

--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <i class="fas fa-bars"></i>
-        <!-- podemos cambiarlo para adaptarlo a bem? -->
-        <img class="container__img" src="media/media03.svg" alt="panic logo" />
-        <a class="nav__link" href="#">q u i</a>
+        <a class="nav__menu" href="#"
+          ><i class="fas fa-bars nav__menu__icon"></i
+        ></a>
+        <ul class="nav__list">
+          <li><a class="nav__link nav__link--hiden" href="#">culpa</li></a>
+          <li><a class="nav__link nav__link--hiden" href="#">in</li></a>
+          <li>
+            <img class="nav__logo" src="media/media03.svg" alt="panic logo" />
+          </li>
+          <li><a class="nav__link nav__link--hiden" href="#">oficina</li></a>
+          <li><a class="nav__link" href="#">qui</a></li>
+        </ul>
       </nav>
     </header>
   </body>
