Footer layout desktop & responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,104 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panic</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <footer class="footer">
+      <div class="footer__section footer__header">
+        <div class="footer__header">
+          <h3>Lorem <span class="footer__header--line">ipsum</span> dolor</h3>
+          <img
+            class="footer__header--icon"
+            src="./assets/cross-big-green.svg"
+            alt=""
+          />
+        </div>
+        <nav class="footer__nav">
+          <ul>
+            <li>
+              <a class="footer__nav--item footer__nav--line" href="#">Home</a>
+            </li>
+            <li><a class="footer__nav--item" href="#"> Works</a></li>
+            <li><a class="footer__nav--item" href="#">About</a></li>
+            <li><a class="footer__nav--item" href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer__body">
+        <div class="footer__section footer__section--align-left">
+          <div class="footer__links-wrapper">
+            <h4 class="footer__title">Lorem ipsum</h4>
+            <a class="footer__link" href="">dolor</a>
+            <a class="footer__link" href="">sit amet</a>
+          </div>
+          <div class="footer__links-wrapper">
+            <h4 class="footer__title">Lorem</h4>
+            <a class="footer__link" href="#">sit amet consectetur</a>
+            <a class="footer__link" href="#">adipisicing elit</a>
+          </div>
+        </div>
+
+        <div class="footer__section">
+          <h4 class="footer__title">Lorem ipsum</h4>
+          <div class="footer__rrss-wrapper">
+            <img
+              class="footer__rrss"
+              src="./assets/fb-green.svg"
+              alt="logo de Facebook"
+            />
+            <img
+              class="footer__rrss footer__rrss--hidden"
+              src="./assets/facebook-pink.svg"
+              alt="logo de Facebook"
+            />
+            <img
+              class="footer__rrss"
+              src="./assets/ig-green.svg"
+              alt="logo de Instagram"
+            />
+            <img
+              class="footer__rrss footer__rrss--hidden"
+              src="./assets/ig-pink.svg"
+              alt="logo de Instagram"
+            />
+            <img
+              class="footer__rrss"
+              src="./assets/vimeo-green.svg"
+              alt="logo de Vimeo"
+            />
+            <img
+              class="footer__rrss footer__rrss--hidden"
+              src="./assets/vimeo-pink.svg"
+              alt="logo de Vimeo"
+            />
+          </div>
+        </div>
+
+        <div class="footer__section footer__section--align-right">
+          <div class="footer__links-wrapper">
+            <h4 class="footer__title">Lorem ipsum</h4>
+            <a class="footer__link" href="#">dolor</a>
+            <a class="footer__link" href="#">sit amet</a>
+            <a class="footer__link" href="#">consectetur</a>
+          </div>
+          <div class="footer__links-wrapper">
+            <h4 class="footer__title">Lorem ipsum</h4>
+            <a class="footer__link" href="#">dolor</a>
+            <a class="footer__link" href="#">sit amet</a>
+            <a class="footer__link" href="#">consectetur</a>
+          </div>
+          <div class="footer__links-wrapper">
+            <h4 class="footer__title">Lorem ipsum</h4>
+            <a class="footer__link" href="#">dolor</a>
+            <a class="footer__link" href="#">sit amet</a>
+            <a class="footer__link" href="#">consectetur</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
