--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header class="header">
       <nav class="nav">
         <a class="nav__menu" href="#"
-          ><i class="fas fa-bars nav__menu__icon"></i
+          ><i class="fas fa-bars nav__menu-icon"></i
         ></a>
         <ul class="nav__list">
           <li><a class="nav__link nav__link--hiden" href="#">culpa</li></a>
@@ -37,9 +37,9 @@
     <footer class="footer">
       <div class="footer__section footer__header">
         <div class="footer__header">
-          <h3>Lorem <span class="footer__header--line">ipsum</span> dolor</h3>
+          <h3>Lorem <span class="footer__header-line">ipsum</span> dolor</h3>
           <img
-            class="footer__header--icon"
+            class="footer__header-icon"
             src="./assets/cross-big-green.svg"
             alt=""
           />
@@ -47,11 +47,11 @@
         <nav class="footer__nav">
           <ul>
             <li>
-              <a class="footer__nav--item footer__nav--line" href="#">Home</a>
+              <a class="footer__nav-item footer__nav-line" href="#">Home</a>
             </li>
-            <li><a class="footer__nav--item" href="#"> Works</a></li>
-            <li><a class="footer__nav--item" href="#">About</a></li>
-            <li><a class="footer__nav--item" href="#">Contact</a></li>
+            <li><a class="footer__nav-item" href="#"> Works</a></li>
+            <li><a class="footer__nav-item" href="#">About</a></li>
+            <li><a class="footer__nav-item" href="#">Contact</a></li>
           </ul>
         </nav>
       </div>
