--- a/works.html
+++ b/works.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panic</title>
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/works.css" />
      <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -33,6 +33,38 @@
         </ul>
       </nav>
     </header>
+    <main class="main">
+        <div class="container_img"><img class="img" src="./media/works/media31.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media32.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media33.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media34.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media05.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media06.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media07.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media08.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media09.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media10.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media11.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media12.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media13.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media14.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media15.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media16.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media17.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media18.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media19.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media20.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media21.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media22.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media23.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media24.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media25.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media26.png" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media27.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media28.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media29.jpg" alt=""></div>
+        <div class="container_img"><img class="img" src="./media/works/media30.jpg" alt=""></div>
+    </main>
 
     <footer class="footer">
       <div class="footer__section footer__header">
@@ -49,7 +81,7 @@
             <li>
               <a class="footer__nav-item footer__nav-line" href="#">Home</a>
             </li>
-            <li><a class="footer__nav-item" href="#"> Works</a></li>
+            <li><a class="footer__nav-item" href="#">Works</a></li>
             <li><a class="footer__nav-item" href="#">About</a></li>
             <li><a class="footer__nav-item" href="#">Contact</a></li>
           </ul>
